Fixed an issue where the filter menu was overlapping the top banner on the home

--- a/content.css
+++ b/content.css
@@ -242,6 +242,10 @@ ytd-browse[page-subtype="home"] div#scroll-container {
     width: 100% !important;
 }
 
+ytd-browse[page-subtype="home"] ytd-feed-filter-chip-bar-renderer {
+    height: 112px !important;
+}
+
 div.shortsLockupViewModelHostMetadataSubhead {
     display: none !important;
 }
